Afegim title en el Team

--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -61,7 +61,7 @@
             <div class="timeline-wrapper" style="margin-left: 30px; width: 150px;">
                 <h1 style="white-space: nowrap;">Your team</h1>
                 {% for usuari in usuaris %}
-                    <a href="{% url 'usuari' usuari.user.id %}"><img src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px; border-radius: 50%;"></a>
+                    <a href="{% url 'usuari' usuari.user.id %}"><img src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px; border-radius: 50%;" title="{{ usuari.user.first_name }}"></a>
                 {% endfor %}
             </div>
         </form>
